[gd_scene load_steps=8 format=3 uid="uid://dbjhc7pmmdv30"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_p5vra"]
[ext_resource type="PackedScene" uid="uid://c8giknctto3q0" path="res://Enemy/cone.tscn" id="2_0nyk1"]
[ext_resource type="PackedScene" uid="uid://bhrcakfk33vv2" path="res://Enemy/policeresizedanims.tscn" id="3_xsiwq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_70vpo"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qbgx5"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ia488"]
points = PackedVector3Array(-0.000195742, 1, -0.000195742, 0.194988, -1, -0.980814, -0.000195742, -1, -1, -0.195184, -1, -0.980814, -0.382733, -1, -0.924041, -0.555599, -1, -0.831637, -0.707126, -1, -0.707126, -0.831637, -1, -0.555599, -0.924041, -1, -0.382733, -0.980814, -1, -0.195184, -1, -1, -0.000195742, -0.980814, -1, 0.194988, -0.924041, -1, 0.382537, -0.831637, -1, 0.555403, -0.707126, -1, 0.70693, -0.555599, -1, 0.831441, -0.382733, -1, 0.923845, -0.195184, -1, 0.980619, -0.000195742, -1, 1, 0.194988, -1, 0.980619, 0.382537, -1, 0.923845, 0.555403, -1, 0.831441, 0.70693, -1, 0.70693, 0.831441, -1, 0.555403, 0.923845, -1, 0.382537, 0.980619, -1, 0.194988, 1, -1, -0.000195742, 0.980619, -1, -0.195184, 0.923845, -1, -0.382733, 0.831441, -1, -0.555599, 0.70693, -1, -0.707126, 0.555403, -1, -0.831637, 0.382537, -1, -0.924041)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1hkik"]

[node name="Enemy" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("1_p5vra")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_70vpo")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_qbgx5")
skeleton = NodePath("../NavigationAgent3D")

[node name="VisionArea" type="Area3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, -0.944089)

[node name="cone" parent="VisionArea" instance=ExtResource("2_0nyk1")]
transform = Transform3D(5, 0, 0, 0, -2.18557e-07, -5, 0, 5, -2.18557e-07, 0, 0, -6.49206)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="VisionArea"]
transform = Transform3D(5, 0, 0, 0, -2.18557e-07, -5, 0, 5, -2.18557e-07, 0, 0, -6.49206)
shape = SubResource("ConvexPolygonShape3D_ia488")

[node name="VisionTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="VisionRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0)
target_position = Vector3(0, 0, -100)
debug_shape_custom_color = Color(1, 1, 0, 1)

[node name="AggroTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DamageArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.723257)
shape = SubResource("CapsuleShape3D_1hkik")

[node name="policeresizedanims" parent="." instance=ExtResource("3_xsiwq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.865741, 0)

[node name="Physical Bone mixamorig_Hips" parent="policeresizedanims/Armature/Skeleton3D" index="1"]
transform = Transform3D(98.0488, 17.2484, -9.42971, -16.8991, 98.4639, 4.39195, 10.0424, -2.71273, 99.4575, -0.64606, 0.47296, -124.472)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.48999e-08, -2.79397e-09, 0.0475143)
body_offset = Transform3D(100, 2.47955e-05, 1.2517e-06, -7.07805e-07, 4.89913, -99.8799, -2.28882e-05, 99.8799, 4.89912, 1.43051e-06, 4.74572, -0.232778)

[node name="Physical Bone mixamorig_Spine" parent="policeresizedanims/Armature/Skeleton3D" index="2"]
transform = Transform3D(98.0546, 17.4137, -9.05825, -17.069, 98.4316, 4.45665, 9.69225, -2.8238, 99.4891, 0.30416, 0.0172188, -134.713)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.83059e-07, 6.52903e-08, 0.0554332)
body_offset = Transform3D(100, 0, 2.6226e-06, 1.37091e-06, -6.67572e-06, -100, 0, 100, -8.10623e-06, 4.81606e-05, 5.54332, -6.07967e-06)

[node name="Physical Bone mixamorig_Spine1" parent="policeresizedanims/Armature/Skeleton3D" index="3"]
transform = Transform3D(98.3024, 16.8077, -7.35861, -16.677, 98.5713, 2.36064, 7.65025, -1.09337, 99.7009, 1.27243, -0.379367, -146.544)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.22808e-09, -5.2953e-09, 0.0633526)
body_offset = Transform3D(100, 3.8147e-06, 1.19209e-07, 2.08616e-07, -6.67572e-06, -100, -7.62939e-06, 100, -8.10623e-06, 7.15256e-07, 6.33526, 1.04308e-06)

[node name="Physical Bone mixamorig_Spine2" parent="policeresizedanims/Armature/Skeleton3D" index="4"]
transform = Transform3D(98.5167, 16.2051, -5.64348, -16.2147, 98.6762, 0.290118, 5.61578, 0.629261, 99.8402, 2.14083, -0.549596, -159.976)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.29219e-09, -7.20578e-09, 0.0712712)
body_offset = Transform3D(100, -1.90735e-06, -3.98606e-07, -3.05474e-07, 7.39098e-06, -100, 0, 100, 6.76513e-06, 3.57628e-07, 7.12712, 2.38419e-07)

[node name="Physical Bone mixamorig_Neck" parent="policeresizedanims/Armature/Skeleton3D" index="5"]
transform = Transform3D(-98.8672, -12.3231, -8.56847, 14.4226, -93.8052, -31.5053, -4.15522, -32.3842, 94.5198, 3.02101, 1.18712, -172.365)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.31969e-10, 5.96046e-08, 0.0557807)
body_offset = Transform3D(-100, 4.76837e-06, 9.53674e-07, 8.64267e-07, 28.667, -95.8029, 0, -95.8029, -28.667, 0, 5.34395, 1.59907)

[node name="Physical Bone mixamorig_Head" parent="policeresizedanims/Armature/Skeleton3D" index="6"]
transform = Transform3D(-99.6987, -6.5835, -4.10243, 7.30544, -97.4709, -21.1198, -2.60826, -21.3559, 97.6582, 4.02691, 5.66244, -190.205)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.00069e-09, 1.04308e-07, 0.128691)
body_offset = Transform3D(-100, -2.24113e-05, -5.126e-06, -2.02656e-06, 28.667, -95.8029, 2.76566e-05, -95.8029, -28.667, 5.96046e-08, 12.329, 3.6892)

[node name="Physical Bone mixamorig_LeftShoulder" parent="policeresizedanims/Armature/Skeleton3D" index="7"]
transform = Transform3D(-8.8698, 87.288, -47.9806, -99.5246, -9.71145, 0.730934, -4.02159, 47.8174, 87.7344, 21.0305, -2.88271, -174.341)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.96994e-08, 3.07542e-06, 0.131014)
body_offset = Transform3D(100, 4.76837e-06, -1.24574e-05, -2.86102e-06, 100, 1.10567e-05, -7.15256e-07, -4.84288e-07, 100, -3.33786e-06, -0.00030899, -13.1014)

[node name="Physical Bone mixamorig_LeftArm" parent="policeresizedanims/Armature/Skeleton3D" index="8"]
transform = Transform3D(-2.94516, -36.0938, -93.2125, -99.2929, 11.7848, -1.42605, 11.4996, 92.5114, -36.1857, 44.4244, -5.22758, -147.674)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.20032e-07, 8.53158e-08, 0.0730333)
body_offset = Transform3D(100, -1.14441e-05, -5.96046e-06, 9.53674e-07, 100, -1.23531e-05, 3.57628e-07, -9.23872e-07, 100, 4.24385e-05, -7.62939e-06, -7.30333)

[node name="Physical Bone mixamorig_LeftForeArm" parent="policeresizedanims/Armature/Skeleton3D" index="9"]
transform = Transform3D(3.05262, -92.5168, 37.8329, -86.8465, -21.1925, -44.817, 49.4809, -31.4884, -80.9945, 28.768, 0.626674, -129.147)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.0416e-09, 1.03785e-07, 0.0945397)
body_offset = Transform3D(100, 0.000133514, -1.90735e-05, -2.67029e-05, -0.000180244, -100, -0.000133514, 100, -0.000160217, 1.90735e-06, 9.45398, 4.76837e-06)

[node name="Physical Bone mixamorig_RightShoulder" parent="policeresizedanims/Armature/Skeleton3D" index="10"]
transform = Transform3D(5.12776, 38.1381, 92.2995, 99.8632, -2.90821, -4.3463, 1.02667, 92.3961, -38.235, -22.2071, 1.89334, -159.253)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.78555e-09, -3.73413e-06, 0.131012)
body_offset = Transform3D(100, -2.38419e-07, -6.67572e-06, -2.38419e-06, -4.14848e-05, -100, -1.90735e-06, 100, -6.14971e-05, 5.96046e-07, 13.1012, 0.00038147)

[node name="Physical Bone mixamorig_RightArm" parent="policeresizedanims/Armature/Skeleton3D" index="11"]
transform = Transform3D(-34.7028, 12.4537, 92.955, 92.5775, 20.4053, 31.828, -15.004, 97.1006, -18.6105, -41.0897, 0.138033, -152.885)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.32608e-07, -1.66868e-07, 0.0730405)
body_offset = Transform3D(100, 9.53674e-06, -1.14441e-05, 0, 100, 1.95503e-05, 5.72205e-06, -3.76701e-05, 100, -3.24249e-05, 1.52588e-05, -7.30405)

[node name="Physical Bone mixamorig_RightForeArm" parent="policeresizedanims/Armature/Skeleton3D" index="12"]
transform = Transform3D(-32.3222, 93.9972, -10.9457, 92.3299, 28.7883, -25.4249, -20.7476, -18.324, -96.0925, -31.4461, 7.84768, -130.974)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.13539e-06, -1.65487e-07, 0.0945517)
body_offset = Transform3D(100, -9.53674e-06, -9.53674e-06, -1.90735e-06, -4.19617e-05, -100, 5.72205e-06, 100, -2.67029e-05, 0.000114441, 9.45517, 1.90735e-05)

[node name="Physical Bone mixamorig_LeftUpLeg" parent="policeresizedanims/Armature/Skeleton3D" index="13"]
transform = Transform3D(-99.4797, 8.61891, 5.43118, 5.22098, 88.9123, -45.468, -8.74783, -44.9479, -88.8997, 6.74064, 11.0097, -90.3113)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.90796e-07, 1.66038e-08, 0.26079)
body_offset = Transform3D(100, 1.90735e-06, 3.57628e-06, 3.57628e-06, 1.52588e-05, -100, -2.38419e-06, 100, 2.28882e-05, 3.8147e-05, 26.079, -7.62939e-06)

[node name="Physical Bone mixamorig_LeftLeg" parent="policeresizedanims/Armature/Skeleton3D" index="14"]
transform = Transform3D(-98.7347, 15.1581, -4.65735, 10.3544, 83.8718, 53.4632, 12.0102, 52.3044, -84.3801, 6.43892, 10.0721, -46.9326)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.93719e-08, -1.47703e-07, 0.239328)
body_offset = Transform3D(100, 4.76837e-06, 1.33514e-05, 7.62939e-06, 1.14441e-05, -100, -1.62125e-05, 99.9999, 4.57764e-05, 2.74181e-06, 23.9328, 3.8147e-06)

[node name="Physical Bone mixamorig_LeftFoot" parent="policeresizedanims/Armature/Skeleton3D" index="15"]
transform = Transform3D(-97.7823, 14.5604, -15.0538, 15.0795, 98.8283, -2.36038, 14.5337, -4.57807, -98.8322, 9.04447, -2.48933, -16.9498)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.18879e-07, 1.22737e-07, 0.0990402)
body_offset = Transform3D(100, -9.53674e-07, 1.89245e-05, 5.63264e-06, 1.04904e-05, -100, -6.67572e-06, 100, 4.45843e-05, 1.00136e-05, 9.90401, -1.66893e-05)

[node name="Physical Bone mixamorig_LeftToeBase" parent="policeresizedanims/Armature/Skeleton3D" index="16"]
transform = Transform3D(-96.5163, 8.25816, -24.8276, 21.9987, 76.9841, -59.9125, 14.1657, -63.287, -76.1189, 11.5108, 0.0981091, -4.17104)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.01164e-09, 6.51218e-08, 0.0392849)
body_offset = Transform3D(100, -1.90735e-06, 1.04904e-05, 0, -3.8147e-05, -100, 3.8147e-06, 100, -6.86646e-05, -1.01328e-06, 3.92849, -3.8147e-06)

[node name="Physical Bone mixamorig_RightUpLeg" parent="policeresizedanims/Armature/Skeleton3D" index="17"]
transform = Transform3D(-99.6329, 0.852957, -8.51841, 1.81342, 99.3472, -11.2624, 8.36674, -11.3755, -98.998, -9.19059, 5.19655, -89.6829)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.32595e-07, 4.49907e-08, 0.260794)
body_offset = Transform3D(100, -9.53674e-07, 4.16487e-05, 4.67896e-05, -1.90735e-06, -100, 3.45707e-06, 100, 2.86102e-06, 1.23978e-05, 26.0794, -5.24521e-06)

[node name="Physical Bone mixamorig_RightLeg" parent="policeresizedanims/Armature/Skeleton3D" index="18"]
transform = Transform3D(-98.5319, -9.49438, -14.1886, -12.6851, 96.3374, 23.6263, 11.4258, 25.0793, -96.1274, -3.57344, 2.47951, -40.86)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.54967e-07, 8.72172e-09, 0.239318)
body_offset = Transform3D(100, -2.67029e-05, -9.05991e-05, -8.55923e-05, -1.52588e-05, -100, 2.38419e-05, 100, -7.62939e-06, -3.8147e-06, 23.9318, 9.53674e-07)

[node name="Physical Bone mixamorig_RightFoot" parent="policeresizedanims/Armature/Skeleton3D" index="19"]
transform = Transform3D(-99.6701, -1.58808, 7.95906, -5.31493, 86.8847, -49.2219, -6.13352, -49.4826, -86.6825, -0.979928, 1.78584, -9.11914)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.98833e-09, 7.65911e-08, 0.100779)
body_offset = Transform3D(100, -4.29153e-06, -3.57628e-06, -4.29153e-06, -4.19617e-05, -100, 9.53674e-07, 100, -3.8147e-05, -2.38419e-07, 10.0779, -3.8147e-06)

[node name="Physical Bone mixamorig_RightToeBase" parent="policeresizedanims/Armature/Skeleton3D" index="20"]
transform = Transform3D(-99.327, -5.26589, 10.3162, -10.5583, 4.54686, -99.337, 4.76192, -99.7577, -5.07225, -2.18688, 10.6447, -0.18425)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.78826e-09, 8.19077e-08, 0.039243)
body_offset = Transform3D(100, -2.0355e-05, 1.90735e-06, -2.86102e-06, -1.90735e-06, -100, 1.35601e-05, 100, -1.43051e-05, -9.53674e-07, 3.9243, -7.62939e-06)

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="timeout" from="VisionTimer" to="." method="_on_vision_timer_timeout"]
[connection signal="timeout" from="AggroTimer" to="." method="_on_aggro_timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]

[editable path="policeresizedanims"]
